--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>spring-integration-file</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-io</groupId>
