moved stuf added filetype enum, converted old assignement

--- a/assignments/puzzle.properties
+++ b/assignments/puzzle.properties
@@ -1,5 +1,5 @@
 ${project-name}.key=This is ${project-name} test property
-Editables=Test,Test2
+Editables=VirtualCPU
 TestClasses=${project-name}Test.java
 SubmitClasses=${project-name}Submit.java
 TestClassTimeout=60
