--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,4 +8,15 @@ moj:
       inheritClassPath: no
       classPath:
         - junit/junit/4.12/junit-4.12.jar
+        
+spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  datasource:
+    url: jdbc:h2:file:~/test
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver              
 ...
