--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,4 +19,11 @@ spring:
     username: sa
     password: sa
     driver-class-name: org.h2.Driver              
+  thymeleaf:
+    mode: HTML
+    
+security.basic.enabled: false
+
+mybatis.mapper-locations: persistence/mapper.xml
+
 ...
