added CONTROL role

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,4 +26,5 @@ security.basic.enabled: false
 
 mybatis.mapper-locations: persistence/mapper.xml
 
+logging.level.nl.moj.server.persistence.TeamMapper: DEBUG
 ...
