--- a/assignments/puzzle.properties
+++ b/assignments/puzzle.properties
@@ -1,6 +1,6 @@
 ${project-name}.key=This is ${project-name} test property
-Editables=VirtualCPU
-TestClasses=${project-name}Test.java
+Editables=VirtualCPU.java
+TestClasses=TestVirtualCPU.java
 SubmitClasses=${project-name}Submit.java
 TestClassTimeout=60
 SubmitClassTimeout=90
