--- a/pom.xml
+++ b/pom.xml
@@ -129,16 +129,23 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.projectlombok</groupId> -->
-<!-- 			<artifactId>lombok</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.projectlombok</groupId> -->
+		<!-- <artifactId>lombok</artifactId> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>net.tascalate.concurrent</groupId>
 			<artifactId>net.tascalate.concurrent.lib</artifactId>
 			<version>0.5.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-model</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 
