--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,4 +27,5 @@ security.basic.enabled: false
 mybatis.mapper-locations: persistence/mapper.xml
 
 logging.level.nl.moj.server.persistence.TeamMapper: DEBUG
+logging.level.org.springframework.integration.file.FileReadingMessageSource: FATAL
 ...
