--- a/assignments/WorkloadBalancer/pom.xml
+++ b/assignments/WorkloadBalancer/pom.xml
@@ -26,6 +26,7 @@
 		<difficulty>3/5</difficulty>
 		<hint>verzin iets</hint>
 		<category>Assembly</category>
+		<solutiontime>3600</solutiontime>
 	</properties>
 
 	<dependencies>
