--- a/pom.xml
+++ b/pom.xml
@@ -108,11 +108,11 @@
 			<version>1.12.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.webjars.npm</groupId>
-			<artifactId>codemirror</artifactId>
-			<version>5.27.4</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.webjars.npm</groupId> -->
+<!-- 			<artifactId>codemirror</artifactId> -->
+<!-- 			<version>5.27.4</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
