--- a/assignments/VirtualCPU/pom.xml
+++ b/assignments/VirtualCPU/pom.xml
@@ -27,6 +27,8 @@
 		<hint>verzin iets</hint>
 		<category>Assembly</category>
 		<solutiontime>3600</solutiontime>
+		<testpenalties>false</testpenalties>
+		<testcredits>true</testcredits>
 	</properties>
 
 	<dependencies>
