--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,10 @@
 			<version>3.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 
