more settings in application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ moj:
     assignmentDirectory: /home/mhayen/Workspaces/workspace-moj/server/assignments
     gitrepository: ssh://git@bitbucket.org/first8/2017-assignments.git
     branch: origin/new_layout
+    threads: 20
+    timeout: 10
     compiler:
       workDir: ./work
       outputDir: ./classes
