--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 moj:
   server:
+    compileBaseDirectory: /home/mhayen/Workspaces/workspace-moj/server/teams
     assignmentDirectory: /home/mhayen/Workspaces/workspace-moj/server/assignments
     gitrepository: ssh://git@bitbucket.org/first8/practice-assignments.git
     branch: origin/master
     threads: 20
-    timeout: 10
+    timeout: 1
     compiler:
       workDir: ./work
       outputDir: ./classes
@@ -21,11 +22,13 @@ spring:
     url: jdbc:h2:file:~/test
     username: sa
     password: sa
-    driver-class-name: org.h2.Driver              
+    driver-class-name: org.h2.Driver     
+    initialize: false         
   thymeleaf:
     mode: HTML
 server.session.timeout: 36000
 security.basic.enabled: false
+
 
 mybatis.mapper-locations: persistence/*
 
