--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:~/test
+    url: jdbc:h2:file:/tmp/mojserver/db/test
     username: sa
     password: sa
     driver-class-name: org.h2.Driver     
