able to stop task and start new one

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 moj:
   server:
-    basedir: /tmp/mojserver/
+    basedir: /tmp/mojserver
     compileDirectory: teams
     assignmentDirectory: assignments
     libDirectory: lib
