--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 moj:
   server:
     basedir: /tmp/mojserver
-    compileDirectory: teams
+    teamDirectory: teams
     assignmentDirectory: assignments
     libDirectory: lib
     gitrepository: ssh://git@bitbucket.org/first8/practice-assignments.git
@@ -33,6 +33,7 @@ security.basic.enabled: false
 
 
 mybatis.mapper-locations: persistence/*
+logging.file: mojserver.log
 logging.level.nl.moj.server: DEBUG
 logging.level.nl.moj.server.persistence.TeamMapper: INFO
 logging.level.nl.moj.server.persistence.ResultMapper: INFO
