--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,13 +4,13 @@ moj:
     teamDirectory: teams
     assignmentDirectory: assignments
     libDirectory: lib
+    javaExecutable: /usr/lib/jvm/java-9-oracle/bin/java
     gitrepository: ssh://git@bitbucket.org/first8/practice-assignments.git
     branch: origin/master
     threads: 20
     timeout: 1
     compiler:
-      javaLocationWindows: C:\Program Files\Java\jdk-9\bin\java.exe
-      javaLocationLinux: /usr/lib/jvm/java-9-oracle/bin/java
+      
       workDir: ./work
       outputDir: ./classes
       inheritClassPath: no
