--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
 			<version>1.5</version>
 		</dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 
 
