--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 moj:
   server:
-    basedir: /tmp/mojserver
+    basedir: /opt/mojserver
     teamDirectory: teams
     assignmentDirectory: assignments
     libDirectory: lib
@@ -23,7 +23,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:/tmp/mojserver/db/test
+    url: jdbc:h2:file:/opt/mojserver/db/test
     username: sa
     password: sa
     driver-class-name: org.h2.Driver     
