--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,10 +17,14 @@ moj:
       classPath:
         - junit/junit/4.12/junit-4.12.jar
     limits:
+      unitTestTimeoutSeconds: 4
       unitTestOutput:
         maxLines: 900
         maxChars: 100000
         maxLineLen: 1000
+        lineTruncatedMessage: "...<b>...</b>||"
+        outputTruncMessage: "...<b>{output truncated}</b>"
+        testTimoutTermination: "...{terminated: test time expired}"
     
 
 spring:
