--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,13 @@
 		    <version>1.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+        
 	</dependencies>
 
 
