removed lombok, not compatible with java 9 at the moment

--- a/pom.xml
+++ b/pom.xml
@@ -156,13 +156,13 @@
 		    <version>1.10</version>
 		</dependency>
 
+        <!-- removed for now, still 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
-        
+		-->
 	</dependencies>
 
 
