--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
+
 moj:
   server:
     basedir: /opt/mojserver
@@ -5,17 +6,18 @@ moj:
     assignmentDirectory: assignments
     libDirectory: lib
     javaExecutable: /usr/lib/jvm/java-9-oracle/bin/java
-    gitrepository: ssh://git@bitbucket.org/first8/practice-assignments.git
-    branch: origin/master
+    assignments:
+      repos:
+        -
+          name: "practice-assignments"
+          url: "ssh://git@bitbucket.org/first8/practice-assignments.git"
+          branch: "origin/master"
+        -
+          name: "2017-assignments"
+          url: "ssh://git@bitbucket.org/first8/2017-assignments.git"
+          branch: "origin/new_layout"
     threads: 20
     timeout: 5
-    compiler:
-      
-      workDir: ./work
-      outputDir: ./classes
-      inheritClassPath: no
-      classPath:
-        - junit/junit/4.12/junit-4.12.jar
     limits:
       unitTestTimeoutSeconds: 4
       unitTestOutput:
