--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
 			<artifactId>codemirror-minified</artifactId>
 			<version>5.27.2</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.7.0</version>
+        </dependency>
         
 		<dependency>
 			<groupId>org.eclipse.jgit</groupId>
