added slow tictac

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ moj:
       teamDirectory: teams
       assignmentDirectory: assignments
       libDirectory: lib
+      soundDirectory: sounds
     assignments:
       repos:
         -
