--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,7 +35,8 @@ moj:
 spring:
   h2:
     console:
-      enabled: false
+      enabled: true
+      path: /h2
   datasource:
     url: jdbc:h2:file:/opt/mojserver/db/test
     username: sa
