--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M5</version>
+		<version>2.0.1.RELEASE</version>
 	</parent>
 	<dependencies>
 		<dependency>
@@ -76,7 +76,8 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
-		</dependency>
+            <version>0.33</version>
+        </dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>sockjs-client</artifactId>
@@ -167,14 +168,12 @@
 		    <artifactId>zt-exec</artifactId>
 		    <version>1.10</version>
 		</dependency>
-
-        <!-- removed for now, still 
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
-		-->
 	</dependencies>
 
 
