--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,42 +1,50 @@
 moj:
   server:
-    basedir: /tmp/moj
-    teamDirectory: teams
-    assignmentDirectory: assignments
-    libDirectory: lib
-    javaExecutable: /Library/Java/JavaVirtualMachines/jdk-9.0.1.jdk/Contents/Home/bin/java
-    gitrepository: ssh://git@bitbucket.org/first8/practice-assignments.git
-    branch: origin/master
+    javaExecutable: /Users/basp/local/java/bin/java
+    directories:
+      teamDirectory: teams
+      assignmentDirectory: assignments
+      libDirectory: lib
+      soundDirectory: sounds
+      javaDocDirectory: javadoc
+      base-directory: game-server/moj-data
+    assignments:
+      repos:
+        - name: "practice-assignments"
+          url: "ssh://git@bitbucket.org/first8/practice-assignments.git"
+          branch: "origin/master"
+        - name: "2017-assignments"
+          url: "ssh://git@bitbucket.org/first8/2017-assignments.git"
+          branch: "origin/new_layout"
     threads: 20
-    timeout: 1
-    compiler:
-      workDir: ./work
-      outputDir: ./classes
-      inheritClassPath: no
-      classPath:
-        - junit/junit/4.12/junit-4.12.jar
+    timeout: 5
     limits:
       unitTestTimeoutSeconds: 4
       unitTestOutput:
-        maxLines: 900
+        maxFeedbackLines: 1000
         maxChars: 100000
         maxLineLen: 1000
-        lineTruncatedMessage: "...<b>...</b>||"
-        outputTruncMessage: "...<b>{output truncated}</b>"
+        lineTruncatedMessage: "...{truncated}"
+        outputTruncMessage: "...{output truncated}"
         testTimoutTermination: "...{terminated: test time expired}"
+
     competition:
        bonusForSuccessfulSubmission: 400
 
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
   datasource:
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:/tmp/mojserver/db/test
     username: sa
     password: sa
-    driver-class-name: org.h2.Driver     
-    initialize: false         
-server.session.timeout: 36000
-security.basic.enabled: false
-
+    driver-class-name: org.h2.Driver
+  thymeleaf:
+    mode: HTML
+  flyway:
+    baseline-on-migrate: true
 
 mybatis.mapper-locations: persistence/*
 logging.file: mojserver.log
