Fixed some stuff

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 moj:
   server:
-    javaExecutable: /usr/lib/jvm/java-9-oracle/bin/java
+    javaExecutable: /Library/Java/JavaVirtualMachines/jdk-9.0.4.jdk/Contents/Home/bin
     directories:
       baseDirectory: /opt/mojserver
       teamDirectory: teams
