--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+
 		<!--<dependency>-->
 			<!--<groupId>org.mybatis.spring.boot</groupId>-->
 			<!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
