MOJ-28: fixed workload balancer assignment

--- a/assignments/VirtualCPU/assignment.yaml
+++ b/assignments/VirtualCPU/assignment.yaml
@@ -29,6 +29,8 @@ assignment-files:
   assignment: src/main/resources/VirtualCPUCase.txt
   editable:
     - src/main/java/VirtualCPU.java
+  readonly:
+    - src/main/java/CPUState.java
   tests:
     - src/test/java/TestVirtualCPU.java
   solution:
