added resources directory

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ moj:
       libDirectory: lib
       soundDirectory: sounds
       javaDocDirectory: javadoc
+      resourceDirectory: resources
     assignments:
       repos:
         -
