MOJ-23: support configurable duration assignments, fixed bug with scheduler having just a single executor thread

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -8,7 +8,7 @@ moj:
       libDirectory: lib
       soundDirectory: sounds
       javaDocDirectory: javadoc
-      base-directory: game-server/moj-data
+      base-directory: moj-game-server/moj-data
     assignments:
       repos:
         - name: "practice-assignments"
