MOJ-37: fixed missing test results MOJ-47: fixed incorrect displaying of non-visible files

--- a/assignments/WorkloadBalancer/assignment.yaml
+++ b/assignments/WorkloadBalancer/assignment.yaml
@@ -43,5 +43,7 @@ assignment-files:
     base: src/test/resources
     files:
     - test-data.txt
+    hidden-files:
+    - sponsor.png
   solution:
   - src/main/resources/workloadbalancerCase.solution
