MOJ-50: enabled configurable test timeout per assignemnt MOJ-50: added option for configurable compile timout per assignment MOJ-49: added a bootstrap mechanism that creates and populates the data directory with all needed artifacts

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -9,26 +9,31 @@ moj:
         runtime: /tmp/bin/java
     directories:
       team-directory: teams
-      assignment-directory: assignments
       lib-directory: lib
       sound-directory: sounds
       javadoc-directory: javadoc
-      base-directory: moj-game-server/moj-data
+      base-directory: /tmp/moj-data
     limits:
-      unitTestTimeoutSeconds: 4
-      unitTestOutput:
+      compile-timeout: PT4S
+      compile-output-limits:
         max-feedback-lines: 1000
-        maxChars: 100000
-        maxLineLen: 1000
-        lineTruncatedMessage: "...{truncated}"
-        outputTruncMessage: "...{output truncated}"
-        testTimeoutTermination: "...{terminated: test time expired}"
+        max-chars: 100000
+        max-line-len: 1000
+        line-truncated-message: "...{truncated}"
+        output-trunc-message: "...{output truncated}"
+        timeout-message: "...{terminated: compile time expired}"
+      test-timeout: PT4S
+      test-output-limits:
+        max-feedback-lines: 1000
+        max-chars: 100000
+        max-line-len: 1000
+        line-truncated-message: "...{truncated}"
+        output-trunc-message: "...{output truncated}"
+        timeout-message: "...{terminated: test time expired}"
     runtimes:
       test:
-        timeout: 10
         threads: 3
       compile:
-        timeout: 10
         threads: 3
       server:
         threads: 5
