--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,26 +9,31 @@ moj:
         runtime: /tmp/bin/java
     directories:
       team-directory: teams
-      assignment-directory: assignments
       lib-directory: lib
       sound-directory: sounds
       javadoc-directory: javadoc
-      base-directory: moj-game-server/moj-data
+      base-directory: moj-data
     limits:
-      unitTestTimeoutSeconds: 30
-      unitTestOutput:
-        maxFeedbackLines: 1000
-        maxChars: 100000
-        maxLineLen: 1000
-        lineTruncatedMessage: "...{truncated}"
-        outputTruncMessage: "...{output truncated}"
-        testTimeoutTermination: "...{terminated: test time expired}"
+      compile-timeout: PT4S
+      compile-output-limits:
+        max-feedback-lines: 1000
+        max-chars: 100000
+        max-line-len: 1000
+        line-truncated-message: "...{truncated}"
+        output-trunc-message: "...{output truncated}"
+        timeout-message: "...{terminated: compile time expired}"
+      test-timeout: PT4S
+      test-output-limits:
+        max-feedback-lines: 1000
+        max-chars: 100000
+        max-line-len: 1000
+        line-truncated-message: "...{truncated}"
+        output-trunc-message: "...{output truncated}"
+        timeout-message: "...{terminated: test time expired}"
     runtimes:
       test:
-        timeout: 30
         threads: 3
       compile:
-        timeout: 10
         threads: 3
       server:
         threads: 5
@@ -45,7 +50,7 @@ spring:
     url: jdbc:h2:file:/opt/mojserver/db/test
     username: sa
     password: sa
-    driver-class-name: org.h2.Driver     
+    driver-class-name: org.h2.Driver
   thymeleaf:
     mode: HTML
 #  flyway:
