--- a/pom.xml
+++ b/pom.xml
@@ -78,15 +78,18 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-messaging</artifactId>
 		</dependency>
+
+		<!-- -->
+		<!-- gui dependencies -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
-            <version>0.33</version>
-        </dependency>
+			<version>0.34</version>
+		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>sockjs-client</artifactId>
-			<version>1.0.2</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -94,10 +97,10 @@
 			<version>2.3.3</version>
 		</dependency>
 
-        <dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>4.0.0-beta-1</version>
+			<version>4.1.3</version>
 		</dependency>
 
 		<dependency>
@@ -108,22 +111,16 @@
 
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>jquery-ui-themes</artifactId>
-			<version>1.12.1</version>
+			<artifactId>codemirror</artifactId>
+			<version>5.40.2</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.webjars.npm</groupId>
-			<artifactId>codemirror-minified</artifactId>
-			<version>5.27.2</version>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>5.3.1</version>
 		</dependency>
 
-        <dependency>
-            <groupId>org.webjars.npm</groupId>
-            <artifactId>font-awesome</artifactId>
-            <version>4.7.0</version>
-        </dependency>
-        
 		<dependency>
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
