--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,9 +57,9 @@ spring:
     driver-class-name: org.h2.Driver
   thymeleaf:
     mode: HTML
-#  flyway:
-#    enabled: false
-#    baseline-on-migrate: true
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
 #  jpa:
 #    generate-ddl: true
 
