--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -22,7 +22,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
