[MOJ-158] geluiden klinken voortaan in de browser client van de gebruiker

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -55,6 +55,8 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+  resources:
+    static-locations: classpath:/bootstrap/sounds/,classpath:/static/
 #  jpa:
 #    generate-ddl: true
 
